--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "ramda": "^0.27.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-typescript": "^7.13.0",
     "@vercel/ncc": "^0.27.0",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "typescript": "^4.1.3"
   }
 }
